<resources>
    <string name="app_name">MazeGame</string>
    <string name="connect_http"><u>Go to check the maximal\nrecords by user of each stage</u></string>
    <string name="acade_mode">ACADE MODE</string>
    <string name="free_mode">FREE MODE</string>
    <string name="option">Option</string>
    <string name="exit">Exit</string>
    <string name="nickname">Nickname</string>
    <string name="input_nickname">Input Nickname</string>
    <string name="input_nickname_hint">Please enter a nickname to use.</string>
    <string name="minimum_size">minimum 6byte</string>
    <string name="overlap_check">Overlap Check(Save)</string>
    <string name="input_code_hint">Enter Code</string>
    <string name="input">Input</string>
    <string name="change">change</string>
    <string name="default_nickname_code">Nickname Code: null</string>
    <string name="nickname_code">Nickname Code: </string>
    <string name="code_not_exist">This code does not exist.</string>
    <string name="nickname_interlocking">nickname interlocking by Code</string>
    <string name="joystick_location">Joystick Location</string>
    <string name="left">left</string>
    <string name="center">center</string>
    <string name="right">right</string>
    <string name="freemode_stage_select">Stage Select</string>
    <string name="freemode_dialog_title">notify</string>
    <string name="freemode_dialog_message"><u>Stage51 is a special stage that can be played by gathering all the stars from stage1 to stage50.\n\nCurrent number of stars: </u></string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">cancel</string>
    <string name="stageactivity_title">stage </string>
    <string name="stageactivity_clear_time">clear time: </string>
    <string name="mainactivity_network_disconnected">Not Connected</string>
    <string name="mainactivity_network_connected">Connected</string>
    <string name="mainactivity_nickname_not_saved">Not Saved</string>
    <string name="mainactivity_nickname_saved">Saved</string>
    <string name="mainactivity_message1">Free Mode requires an\n\n</string>
    <string name="mainactivity_message2">1. Internet connection(</string>
    <string name="mainactivity_message3">2. Save Nickname in Options(</string>
    <string name="mainactivity_message4">to upload Clear Time.</string>
</resources>
